# Quartz

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  parser.js  server.properties
assets/: dimension.snbt  dimension_codec.snbt  mappings.json  protocol.json
assets/Pickaxe/: protocol.json
chat/: Cargo.toml
chat/src/: builder.rs  cfmt.rs  color.rs  component.rs  lib.rs
datapack/: Cargo.toml
datapack/src/: datapack.rs  lib.rs
datapack/src/data/: datatypes.rs  functions.rs  item_modifiers.rs  loot_tables.rs  mod.rs  predicate.rs  structure.rs  tags.rs
datapack/src/data/advancement/: conditions.rs  display.rs  mod.rs
datapack/src/data/recipe/: cooking.rs  ingredient.rs  mod.rs  recipe.rs  shaped.rs  shapeless.rs  smithing.rs  stonecutting.rs
datapack/src/data/world_gen/: biome.rs  carvers.rs  density_function.rs  dimension.rs  dimension_type.rs  features.rs  jigsaw_pool.rs  mod.rs  noise.rs  noise_settings.rs  processors.rs  structure_features.rs  structure_set.rs  surface_builders.rs
datapack/tests/: default_datapack.rs
macros/: Cargo.toml
macros_impl/: Cargo.toml
macros_impl/src/: lib.rs
macros_impl/src/packet/: gen.rs  mod.rs  parse.rs
mcutil/: Cargo.toml
mcutil/src/: lib.rs  map.rs  uln.rs  uuid.rs
nbt/: Cargo.toml
nbt/src/: lib.rs  read.rs  repr.rs  snbt.rs  tag.rs  write.rs
network/: Cargo.toml  build.rs
network/src/: bitmask.rs  lib.rs  netutil.rs  packet_data.rs  packet_types.rs
pickaxe_data/: mappings.json  package-lock.json  package.json  parser.ts  protocol.json  tsconfig.json
protocol_data/: mappings.json  protocol.json
qdat/: Cargo.toml  build.rs
qdat/buildscript/: blockstate.rs  item_info.rs  items.rs  mod.rs
qdat/src/: lib.rs  registry.rs  uln.rs
qdat/src/block/: mod.rs  states.rs
qdat/src/block/behavior/: mod.rs
qdat/src/item/: item.rs  item_info.rs  mod.rs
qdat/src/world/: lighting.rs  location.rs  mod.rs
quartz/: Cargo.toml  build.rs  format.sh
quartz/buildscript/: blockstate.rs  mod.rs  packet_types.rs  packets.rs
quartz/buildscript/assets/: blocks.json  items.json  mappings.json  protocol.json  types.json
quartz/buildscript/assets/Pickaxe/: mappings.json
quartz/src/: config.rs  launch.rs  lib.rs  main.rs  server.rs
quartz/src/base/: assets.rs  config.rs  diagnostic.rs  exec.rs  mod.rs  registries.rs  registry.rs  server.rs  static_registry.rs
quartz/src/block/: entity.rs  init.rs  mod.rs  state.rs  states.rs
quartz/src/block/behavior/: mod.rs
quartz/src/block/entities/: furnace_entity.rs
quartz/src/chat/: mod.rs
quartz/src/command/: arg.rs  context.rs  executor.rs  init.rs  mod.rs  sender.rs
quartz/src/entities/: mod.rs  player.rs
quartz/src/item/: init.rs  inventory.rs  item.rs  item_info.rs  item_stack.rs  mod.rs
quartz/src/nbt/: mod.rs
quartz/src/network/: connection.rs  handler.rs  mod.rs  netutil.rs  packet.rs  packet_handler.rs  packets.rs
quartz/src/scheduler/: task.rs
quartz/src/util/: uln.rs
quartz/src/world/: location.rs  mod.rs  world.rs
quartz/src/world/chunk/: chunk.rs  encoder.rs  error.rs  gen.rs  light.rs  palette.rs  provider.rs  section.rs  states.rs
quartz/tests/: prng.rs
quartz_launcher/: Cargo.toml
quartz_launcher/src/: main.rs
quartz_macros/: Cargo.toml
quartz_macros/linkable/: linkable.rs
quartz_macros/src/: gen.rs  lib.rs  listenable.rs  parse.rs
quartz_macros_impl/: Cargo.toml
quartz_macros_impl/src/: lib.rs
quartz_macros_impl/src/packet/: gen.rs  mod.rs  parse.rs
quartz_plugin/: Cargo.toml
quartz_plugin/src/plugin/: plugin_info.rs
quartz_plugins/: Cargo.toml
quartz_plugins/example-plugin/: Cargo.toml
quartz_plugins/example_plugin/: Cargo.toml
quartz_plugins/example_plugin/src/: lib.rs
quartz_plugins/src/: lib.rs
quartz_plugins/src/plugin/: plugin_info.rs  plugin_manager.rs
quartz_server/: Cargo.toml
quartz_server/src/: lib.rs  main.rs  plugin_lib.rs  server.rs
quartz_server/src/block/: init.rs  mod.rs
quartz_server/src/command/: executor.rs  init.rs  sender.rs
quartz_server/src/item/: item.rs  mod.rs
quartz_server/src/nbt/: read.rs
quartz_server/src/network/: mod.rs  packet_handler.rs
quartz_server/src/util/: mod.rs  uuid.rs
quartz_server/src/world/: location.rs
quartz_server/src/world/chunk/: provider.rs
src/: config.rs  logging.rs  main.rs  mc_datatype_helpers.rs  server.rs  server_ping.rs  tcp_socket_helper.rs
src/assets/: blocks.json  blocks_default.json  items.json
src/block/: block.rs  entity.rs  init.rs  state.rs
src/block/entities/: furnace_entity.rs
src/chat/: cfmt.rs  component.rs
src/command/: arg.rs  commands.rs  executor.rs  init.rs
src/data/: chunk.rs  location.rs  registry.rs  uln.rs  uuid.rs
src/item/: init.rs  inventory.rs  item.rs  item_info.rs
src/nbt/: read.rs  snbt.rs  tag.rs  write.rs
src/network/: connection.rs  packet_handler.rs
src/util/: idlist.rs  ioutil.rs
src/world/chunk/: chunk.rs  provider.rs
util/: Cargo.toml
util/src/: hash.rs  lib.rs  logging.rs  map.rs  math.rs  netutil.rs  single_access.rs  threadpool.rs  uln.rs  uuid.rs  variant.rs  vector.rs
worldgen/: Cargo.toml
worldgen/src/: density_function.rs  lib.rs  spline.rs
worldgen/src/density_function/: cache.rs  density_functions.rs  interpolator.rs  mod.rs  spline.rs
worldgen/src/noise/: blended.rs  mod.rs  normal.rs  perlin.rs  simplex.rs
worldgen/src/random/: java.rs  legacy_random.rs  marsaglia_polar.rs  mod.rs  util.rs  worldgen.rs  xoroshiro.rs
worldgen/tests/: prng.rs
