[package]
name = "minecrust"
version = "0.1.0"
authors = ["maddymakesgames", "Cassy343", "Fish"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.29"
flate2 = "1.0.14"
tokio = { version = "0.2.18", features = ["full"] }
rand = "0.7.3"
cesu8 = "1.1.0"
byteorder = "1.3.4"