[package]
name = "chat"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4.0"

[target.'cfg(unix)'.dependencies]
termion = "1.5.5"