[package]
name = "quartz_datapack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qdat = { path = "../qdat" }
quartz_chat = { path = "../chat" }

quartz_nbt = { version = "0.2.4", features = ["serde"]}

serde = {version = "1", features = ["derive"]}
serde_json = "1"