[package]
name = "nbt"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat = { path = "../chat" }

byteorder = "1.3.4"
flate2 = "1.0.16"
regex = "1"
lazy_static = "1.4.0"
cesu8 = "1.1.0"
doc-comment = "0.3.3"