[package]
name = "quartz_net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qdat = { path = "../qdat" }
quartz_chat = { path = "../chat" }
quartz_macros = { path = "../macros" }
quartz_nbt = "0.2.4"

uuid = { version = "0.8", features = ["serde", "v4"] }
openssl = "0.10"
byteorder = "1.4"
serde = "1"
serde_json = "1"
log = "0.4"

[build-dependencies]
quartz_macros_impl = { path = '../macros_impl' }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
indexmap = { version = "1.7", features = ["serde"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"
once_cell = "1.8.0"
syn = { version = "1.0.55", features = ["full"] }