[package]
name = "qdat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
phf = { version = "0.11", features = ["macros"] }
tinyvec = "1.3"
serde_json = "1"
flashmap = "0.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
indexmap = { version = "1.7", features = ["serde"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.55", features = ["full"] }
prettyplease = "0.1"