[package]
name = "quartz"
version = "0.1.0"
authors = ["maddymakesgames", "Cassy343"]
edition = "2018"

[[bin]]
name = "quartz_launcher"
path = "src/main.rs"

[lib]
name = "quartz"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
chat = { path = "../chat" }
util = { path = "../util" }
quartz_commands = { path = "../../quartz_commands" }
quartz_macros = { path = "../quartz_macros" }

# External dependencies
array-init = "2.0.0"
byteorder = "1.4.3"
chrono = "0.4.19"
enum_dispatch = "0.3.7"
flate2 = "1.0.20"
futures-lite = "1.12.0"
hex = "0.4.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
linefeed = "0.6.0"
log = "0.4.14"
log4rs = "1.0.0"
num-traits = "0.2.14"
once_cell = "1.8.0"
openssl = "0.10.34"
phf = { version = "0.9.0", features = ["macros"] }
quartz_nbt = "0.1.2"
rand = "0.8.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.3"
smol = "1.2.5"
tinyvec = "1.2.0"
ureq = { version = "2.1.1", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"