[package]
name = "quartz"
version = "0.1.0"
authors = ["maddymakesgames", "Cassy343"]
edition = "2018"

[[bin]]
name = "quartz_launcher"
path = "src/main.rs"

[lib]
name = "quartz"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
quartz_chat = { path = "../chat" }
quartz_util = { path = "../util" }
quartz_macros = { path = "../macros" }

# External dependencies
byteorder = "1.4.3"
enum_dispatch = "0.3.7"
flate2 = "1.0.20"
futures-lite = "1.12.0"
hex = "0.4.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
linefeed = "0.6.0"
log = "0.4.14"
once_cell = "1.8.0"
openssl = "0.10.34"
phf = { version = "0.9.0", features = ["macros"] }
quartz_commands = "0.1.0"
quartz_nbt = { version = "0.2.1", features = ["serde"] }
rand = "0.8.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.3"
smol = "1.2.5"
tinyvec = "1.2.0"
ureq = { version = "2.1.1", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[build-dependencies]
quartz_macros_impl = { path = '../macros_impl' }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
indexmap = { version = "1.7", features = ["serde"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"
once_cell = "1.8.0"
syn = { version = "1.0.55", features = ["full"] }

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"