[package]
name = "quartz"
version = "0.1.0"
authors = ["maddymakesgames", "Cassy343"]
edition = "2021"

[[bin]]
name = "quartz_launcher"
path = "src/main.rs"

[lib]
name = "quartz"
path = "src/lib.rs"

[dependencies]
# Internal dependencies
quartz_chat = { path = "../chat" }
quartz_util = { path = "../util" }
quartz_macros = { path = "../macros" }
quartz_net = { path = "../network" }
qdat = { path = "../qdat" }

# External dependencies
byteorder = "1.4.3"
dashmap = "5.1.0"
enum_dispatch = "0.3.7"
flate2 = "1.0.20"
futures-util = "0.3.16"
hecs = {git = "https://github.com/Rusty-Quartz/checs", features = ["macros"]}
hex = "0.4.3"
linefeed = "0.6.0"
log = "0.4.14"
once_cell = "1.8.0"
openssl = "0.10.34"
parking_lot = { version = "0.12.0", features = ["nightly"] }
quartz_commands = "0.1.0"
quartz_nbt = { version = "0.2.5", features = ["serde"] }
rand = "0.8.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.3"
static_assertions = "1.1.0"
tinyvec = "1.2.0"
ureq = { version = "2.1.1", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "v3"] }
noise = "0.7.0"

[dependencies.tokio]
version = "1.9.0"
features = [
    "io-util",
    "fs",
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "sync",
    "time"
]

[build-dependencies]
quartz_macros_impl = { path = '../macros_impl' }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
indexmap = { version = "1.7", features = ["serde"] }
proc-macro2 = "1.0.24"
quote = "1.0.8"
once_cell = "1.8.0"
syn = { version = "1.0.55", features = ["full"] }

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"