[package]
name = "quartz_launcher"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartz = { path = "../quartz" }
log = "0.4.8"
linefeed = "0.6.0"