[package]
name = "quartz"
version = "0.1.0"
authors = ["maddymakesgames", "Cassy343"]
edition = "2018"

[lib]
name = "quartz"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4.0"
openssl = "0.10.29"
flate2 = "1.0.14"
rand = "0.7.3"
cesu8 = "1.1.0"
byteorder = "1.3.4"
log = "0.4.8"
log4rs = "0.12.0"
chrono = "0.4.11"
linefeed = "0.6.0"
regex = "1"
lazy_static = "1.4.0"
ureq = { version = "1.1.1", features = ["json"] }
hex = "0.4.2"
once_cell = "1.4.0"
quartz_plugins = { path = "../quartz_plugins" }
quartz_macros = { path = "../quartz_macros" }

[target.'cfg(unix)'.dependencies]
termion = "1.5.5"