[package]
name = "util"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.12.0"
chrono = "0.4.11"
linefeed = "0.6.0"
rand = "0.7.3"
flate2 = "1.0.14"

[target.'cfg(unix)'.dependencies]
termion = "1.5.5"