[package]
name = "quartz_util"
version = "0.1.0"
authors = ["Ian Smith <isilversmith810@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
log = "0.4.14"
log4rs = "1.0.0"
chrono = "0.4.19"
linefeed = "0.6.0"
num-traits = "0.2.14"
rand = "0.8.4"
flate2 = "1.0.20"

[target.'cfg(unix)'.dependencies]
termion = "1.5.6"