[package]
name = "plugin-test"
version = "0.1.0"
authors = ["maddymakesgames"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartz = {path = "../../quartz_server"}
serde = "1.0.112"
serde_json = "1.0.55"

[lib]
crate-type = ["dylib"]
